[package]
name = "v8find4rs"
version = "0.1.0"
edition = "2018"
authors = ["Viktor Gukov <zchokobo@gmail.com>"]
license = "MIT"
repository = "https://github.com/EightM/v8find4rs"
description = "Finder for 1C: Enterprise versions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs_io = "0.1.7"
exe = "0.4.2"
regex = "1.5.4"
itertools = "0.10.1"
lazy_static = "1.4.0"
log = "0.4"